[gd_scene load_steps=12 format=2]

[ext_resource path="res://Column.gd" type="Script" id=1]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona1.png" type="Texture" id=2]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona7.png" type="Texture" id=3]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona8.png" type="Texture" id=4]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona4.png" type="Texture" id=5]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona6.png" type="Texture" id=6]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona2.png" type="Texture" id=7]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona5.png" type="Texture" id=8]
[ext_resource path="res://Anims/гл. гр/Способности/Колона/animKolona3.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "column",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 10 )

[node name="Column" type="Area2D"]
z_index = 3
collision_layer = 63
collision_mask = 63
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -22.0, -22.0 ],
"_edit_vertical_guides_": [ -1.0, 14.0 ]
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -62, -76 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "column"
centered = false

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -10 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Column_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
